# female-supervillain-trading-card-restapi

./: README.md  main.py  pyproject.toml  villain.db
static/: addvillain.html  addvillain.js  deletevillain.html  deletevillain.js  villain.css  villain.html  villain.js
